testsuite/resolution/compile-fail/builtin-body.verona
// Copyright (c) Contributers to Project Verona. All rights reserved.
// Licensed under the MIT License.

class Main {
  // CHECK-L: builtin-body.verona:${LINE:+1}:11: error: Builtin method 'foo' in 'Main' must not have a body
  builtin foo() { }
}
